--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,14 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "laravel/framework": "5.2.*"
+    "illuminate/support": "5.2.*",
+    "illuminate/routing": "5.2.*",
+    "illuminate/http": "5.2.*",
+    "illuminate/config": "5.2.*"
   },
   "autoload": {
     "psr-4": {
       "UnstoppableCarl\\Pages\\": "src"
     }
-  },
-  "minimum-stability": "dev"
+  }
 }
